--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -73,7 +73,7 @@ width: 90vh;
 
 
 .buyBtn{
-    
+    font-size: 1.5vh;
     width: 10vh;
     height: 3vh;
     border-radius: 3vh;
@@ -166,16 +166,17 @@ width: 90vh;
 }
 
 .modalContainer{
+    border-radius: 3vh;
     display: flex;
     
     align-items: center;
-    width: 30vh;
-    min-height: 40vh;
+    width: 40vh;
+    min-height: 60vh;
     margin-left: -80vh;
     margin-top: 10vh;
   
     position: absolute;
-    box-shadow: 0px 0.3vh 6vh .5vh #000000;
+    box-shadow: 0px 0.3vh 6vh .5vh #bd9393;
     background-color: #fcd4d4;
     justify-content: center;
     flex-direction: column;
@@ -191,6 +192,7 @@ width: 90vh;
     display: flex;
     flex-direction: row;
     margin: 1vh 0 1vh 0;
+    box-shadow: 0 0.4vh 1.1vh 0  #bd9393;
 }
 .modalItemImg{
     width: 7vh;
