--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -62,6 +62,10 @@ width: 90vh;
 
 .itemImg{
     width: 15vh;
+    transition: transform 1s;
+}
+.itemImg:hover{
+    transform: scale(1.1);
 }
 
 .menuListContainer{
@@ -82,6 +86,11 @@ width: 90vh;
     margin-bottom: 2vh;
     cursor: pointer;
     background-color: bisque;
+    transition: transform 0.1s;
+} 
+
+.buyBtn:active{
+    transform: translateY(0.3vh);
 }
 
 .btnContainer{
@@ -200,9 +209,8 @@ width: 90vh;
 }
 .modalItemImg{
     width: 7vh;
-
-    
 }
+
 
 .bucketValue{
     display: flex;
